@@ -86,21 +86,17 @@ static const struct cli_magic_s cli_magic[] = {
     {0,  "Return-Path: ",		13, "Maildir",		  CL_MAILFILE},
     {0,  "Return-path: ",		13, "Maildir",		  CL_MAILFILE},
     {0,  "Delivered-To: ",		14, "Mail",		  CL_MAILFILE},
-    {0,  "X-UIDL: ",			8,  "Mail",		  CL_MAILFILE},
+    {0,  "X-",				2,  "Mail",		  CL_MAILFILE},
     {0,  ">From ",			6,  "Mail",		  CL_MAILFILE},
     {0,  "Date: ",			6,  "Mail",		  CL_MAILFILE},
     {0,  "Message-Id: ",		12, "Mail",		  CL_MAILFILE},
     {0,  "Message-ID: ",		12, "Mail",		  CL_MAILFILE},
-    {0,  "X-Apparently-To: ",		17, "Mail",		  CL_MAILFILE},
-    {0,  "X-Envelope-From: ",		17, "Mail",		  CL_MAILFILE},
     {0,  "Envelope-to: ",		13, "Mail",		  CL_MAILFILE},
     {0,  "Delivery-date: ",		15, "Mail",		  CL_MAILFILE},
     {0,  "To: ",			4,  "Mail",		  CL_MAILFILE},
     {0,  "Subject: ",			9,  "Mail",		  CL_MAILFILE},
     {0,  "For: ",			5,  "Eserv mail",	  CL_MAILFILE},
     {0,  "From: ",			6,  "Exim mail",	  CL_MAILFILE},
-    {0,  "X-Symantec-",			11, "Symantec",		  CL_MAILFILE},
-    {0,  "X-EVS",			5,  "EVS mail",		  CL_MAILFILE},
     {0,  "v:\015\012Received: ",	14, "VPOP3 Mail (DOS)",	  CL_MAILFILE},
     {0,  "v:\012Received: ",		13, "VPOP3 Mail (UNIX)",  CL_MAILFILE},
     {0,  "Hi. This is the qmail-send",  26, "Qmail bounce",	  CL_MAILFILE},
